# Algorithm-analysis-and-design

./: .gitignore
Bie daalt 1/ubmaproute/: README.md  pom.xml
Bie daalt 1/ubmaproute/mapdata/: README.md  gis_osm_roads_free_1.qix  gis_osm_roads_free_1.shx
Bie daalt 1/ubmaproute/src/main/java/com/example/: App.java
Bie daalt 2/: README.md
Bie daalt 2/java/: pom.xml
Bie daalt 2/python/: main.py
Bie daalt 2/python/tests/: test_justify.py
Bie daalt 2/python/text_justify/: __init__.py  algorithms_dp.py  algorithms_greedy.py
Lab 2/: text.txt
Lab 2/Cpp/: CMakeLists.txt  testdata.txt
Lab 2/Cpp/src/: dataReader.cpp  dataReader.h  search.cpp  search.h  sorts.cpp  sorts.h
Lab 2/Cpp/tests/: test.cpp
Lab 2/my-app/: pom.xml
Lab 2/my-app/src/main/java/com/example/: DataReader.java  Main.java  Searchs.java  Sorts.java
Lab 2/my-app/src/test/java/com/example/: SortsTest.java
Lab 5/algo_lab5/: pom.xml
Lab 5/python/: 1.NiceString.py  2.Superpow.py  3.PermutetionTrans.py
Lab 5/text/: angli h1.txt  angli h2.txt  angli h3.txt  pseudo code.txt
Lab 6/: 4.MedianOf2SortedArrays  509.FibonacciNumber  53.MaximumSubArray  70.ClimbingStairs  746.MinCostClimbingStairs
Lab 7/: 1.Pascal's_Triangle_II.py  2.C. Divisibility by Eight.py  3.Longest Common Subsequence.py  4.Unique Binary Search Trees.py  Star. Maximum Subarray.py
Lab1/Cpp/: CMakeLists.txt
Lab1/Cpp/include/: Reader.h  tempCodeRunnerFile.h
Lab1/Cpp/src/: Reader.cpp  main.cpp
Lab1/Cpp/tests/: test.cpp
Lab1/lab1_algo/: database.sql  index.html  markdown.md  pom.xml
(+22 files in other folders)
